# HeartNext

./: CMakeLists.txt  README.md
include/: Lua.hh  VectorWrapper.h  base.h
lua/: 3D_without_fiber_4_scar_increase_3cell_ischemia1a_1b_infarct_4.lua  LCPrenew_600_600_fangfang_ischemia1a_1b_infarct.lua  LCPrenew_600_600_fangfang_ischemia1a_1b_infarct_gradient_100_new_left_normal.lua  LCPrenew_600_600_fangfang_ischemia1a_1b_infarct_left_2.lua  core.lua  server.lua  singleCell.lua  standAlone.lua
src/: 06Model.cpp  06Model.cu  06model_ischemia_1a_1b_infarct.cpp  06model_ischemia_1a_1b_infarct.cu  Lua.cc  VectorWrapper.cpp  base.cu  test.cpp
